		multiple renderers.  The change affects 
		HistogramSeriesAttributes and TimeSeriesAttributes.
	HistogramGenerator: fixed a bug in removeSeries to preserve the
		attributes of the remaining series.	
	HistogramSeriesAttributes: fixed a bug with the series name being null
		in the remove series confirmation dialog
	TimeSeriesAttributes: same underlying problem as before: null returned
		by getSeriesPaint()  (which caused a missmatch between a 
		series' color and the initial color in the color well in the 
		attribute inspector for that series).
	HistogramGenerator: added function addSeriesToDataSet to isolate
		dataset.addSeries behavior, so it can be changed later (instead
		of overriding the entire update() function.
	ChartGenerator: legend is now built based on the XYPlot, not just its
		main renderer; series using different renderers will all be 
		included in the legend now.
	ChartingPropertyInspector: the ChartGenerator object is available 
		through getGenerator() method
	ChartingPropertyInspector: new constructor allows one to supply the 
		chart generator.  Matching constructors available in subclasses 
		(HistogramChartingPropertyInspector, 
		TimeSeriesChartingPropertyInspector)
	New Schedule, with improved functionality in multithreaded environments.
		This hasn't been tested particularly well and may introduce 
		bugs; please let us know.
	Removed vestigial 'parent' instance variable in PropertyInspector, 
		which wasn't really being used.	
	ChartGenerator: swing makeover to prevent series attributes from spreading
		to cover any vertical space.  Also, added 'up' and 'down' buttons
		in icon form, plus a close box in icon form, to the series
		attributes to enable them to move relative to one another.  Right
		now they're in a suboptimal location: next to the 'show' button.
		Maybe we can move them later.
	Added MethodStep and explained its functionality, and MASON's general
		use of Steppable, in the HowTos