@@ -78,7 +78,7 @@ To use MASON's 3D toolkit (or view its 3D demo apps), <b>install Sun's <a href="
 To do charting, you'll need to install two libraries:
 
     <ol>
-    <li><a href="http://www.jfree.org/jfreechart/index.php">jFreeChart</a>.  The <b>jfreechart-1.0.1.jar</b> and <b>jcommon-1.0.0.jar</b> files are located in the <b>lib</b> directory of the jFreeChart distribution.  Move them to the <b>mason</b> directory.
+    <li><a href="http://www.jfree.org/jfreechart/">jFreeChart</a>.  The <b>jfreechart-1.0.1.jar</b> and <b>jcommon-1.0.0.jar</b> files are located in the <b>lib</b> directory of the jFreeChart distribution.  Move them to the <b>mason</b> directory.
     <li><a href="http://www.lowagie.com/iText/download.html">iText</a>.  Move the <b>itext-1.4.jar</b> file to the <b>mason</b> directory.
     </ol>
 
